<resources>
    <string name="app_name">ZYVO</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="where">Where</string>
    <string name="time">Time</string>
    <string name="activity">Activity</string>
    <string name="title_activity_view_image">ViewImageActivity</string>
    <string name="dummy_button">Dummy Button</string>
    <string name="dummy_content">DUMMY\nCONTENT</string>
    <string name="login">Login</string>
    <string name="enter_your_email_or_password_to_login_nyour_account">Enter your Email or password to login\nyour account</string>
    <string name="enter_your_number_here">Enter your number here</string>
    <string name="enter_password">Enter password</string>
    <string name="enter_your_new_password_here">Enter your new password here.</string>
    <string name="confirm_now"><u>Confirm now</u></string>
    <string name="api_key">AIzaSyC9NuN_f-wESHh3kihTvpbvdrmKlTQurxw</string>
    <!-- Strings used for fragments for navigation -->
    <string name="first_fragment_label">First Fragment</string>
    <string name="second_fragment_label">Second Fragment</string>
    <string name="next">Next</string>
    <string name="previous">Previous</string>
    <string name="resizable_text_read_more">…Show More</string>
    <string name="resizable_text_read_less">…Show Less</string>
    <string name="dialogMessage">"Please Turn On Your Location.Your location helps us enhance your overall experience, making it more convenient and efficient. Rest assured, your privacy is our priority, and your location data will be handled securely and responsibly.Thank you for helping us serve you better!"</string>

    <string name="default_web_client_id" translatable="false">81364080009-mo66b0m5vf06t8otlsvs4vli9qpvav15.apps.googleusercontent.com</string>
    <string-array name="day">
        <item>01</item>
        <item>02</item>
        <item>03</item>
        <item>04</item>
        <item>05</item>
        <item>06</item>
        <item>07</item>
        <item>08</item>
        <item>09</item>
        <item>10</item>
        <item>11</item>
        <item>12</item>
        <item>13</item>
        <item>14</item>
        <item>15</item>
        <item>16</item>
        <item>17</item>
        <item>18</item>
        <item>19</item>
        <item>20</item>
        <item>21</item>
        <item>22</item>
        <item>23</item>
        <item>24</item>
        <item>25</item>
        <item>26</item>
        <item>27</item>
        <item>28</item>
        <item>29</item>
        <item>30</item>
        <item>31</item>
    </string-array>

    <string-array name="month">
        <item>January</item>
        <item>February</item>
        <item>March</item>
        <item>April</item>
        <item>May</item>
        <item>June</item>
        <item>July</item>
        <item>August</item>
        <item>September</item>
        <item>October</item>
        <item>November</item>
        <item>December</item>

    </string-array>

    <string name="lorem_ipsum_short">
        It is a long established fact that a reader will be distracted by the readable content of a page when looking at its layout. The point of using Lorem Ipsum is that it has a more-or-less normal distribution of letters, as opposed to using Content here, content here, making it look like readable English. Many desktop publishing packages and web page editors now use Lorem Ipsum as their default model text, and a search

    </string>


    <string name="lorem_ipsum">
        Lorem ipsum dolor sit amet, consectetur adipiscing elit. Nam in scelerisque sem. Mauris
        volutpat, dolor id interdum ullamcorper, risus dolor egestas lectus, sit amet mattis purus
        dui nec risus. Maecenas non sodales nisi, vel dictum dolor. Class aptent taciti sociosqu ad
        litora torquent per conubia nostra, per inceptos himenaeos. Suspendisse blandit eleifend
        diam, vel rutrum tellus vulputate quis. Aliquam eget libero aliquet, imperdiet nisl a,
        ornare ex. Sed rhoncus est ut libero porta lobortis. Fusce in dictum tellus.\n\n
        Suspendisse interdum ornare ante. Aliquam nec cursus lorem. Morbi id magna felis. Vivamus
        egestas, est a condimentum egestas, turpis nisl iaculis ipsum, in dictum tellus dolor sed
        neque. Morbi tellus erat, dapibus ut sem a, iaculis tincidunt dui. Interdum et malesuada
        fames ac ante ipsum primis in faucibus. Curabitur et eros porttitor, ultricies urna vitae,
        molestie nibh. Phasellus at commodo eros, non aliquet metus. Sed maximus nisl nec dolor
        bibendum, vel congue leo egestas.\n\n
        Sed interdum tortor nibh, in sagittis risus mollis quis. Curabitur mi odio, condimentum sit
        amet auctor at, mollis non turpis. Nullam pretium libero vestibulum, finibus orci vel,
        molestie quam. Fusce blandit tincidunt nulla, quis sollicitudin libero facilisis et. Integer
        interdum nunc ligula, et fermentum metus hendrerit id. Vestibulum lectus felis, dictum at
        lacinia sit amet, tristique id quam. Cras eu consequat dui. Suspendisse sodales nunc ligula,
        in lobortis sem porta sed. Integer id ultrices magna, in luctus elit. Sed a pellentesque
        est.\n\n
        Aenean nunc velit, lacinia sed dolor sed, ultrices viverra nulla. Etiam a venenatis nibh.
        Morbi laoreet, tortor sed facilisis varius, nibh orci rhoncus nulla, id elementum leo dui
        non lorem. Nam mollis ipsum quis auctor varius. Quisque elementum eu libero sed commodo. In
        eros nisl, imperdiet vel imperdiet et, scelerisque a mauris. Pellentesque varius ex nunc,
        quis imperdiet eros placerat ac. Duis finibus orci et est auctor tincidunt. Sed non viverra
        ipsum. Nunc quis augue egestas, cursus lorem at, molestie sem. Morbi a consectetur ipsum, a
        placerat diam. Etiam vulputate dignissim convallis. Integer faucibus mauris sit amet finibus
        convallis.\n\n
        Phasellus in aliquet mi. Pellentesque habitant morbi tristique senectus et netus et
        malesuada fames ac turpis egestas. In volutpat arcu ut felis sagittis, in finibus massa
        gravida. Pellentesque id tellus orci. Integer dictum, lorem sed efficitur ullamcorper,
        libero justo consectetur ipsum, in mollis nisl ex sed nisl. Donec maximus ullamcorper
        sodales. Praesent bibendum rhoncus tellus nec feugiat. In a ornare nulla. Donec rhoncus
        libero vel nunc consequat, quis tincidunt nisl eleifend. Cras bibendum enim a justo luctus
        vestibulum. Fusce dictum libero quis erat maximus, vitae volutpat diam dignissim.
    </string>
    <string name="we_ll_start_with_some_questions_and_get_you_to_the_right_place">We’ll start with some questions \n and get you to the right place.</string>
    <string name="post_title_article_title_nname_article_blog">Post title article title \nname article blog</string>
    <string name="table_of_content"><u>Table Of Content</u></string>
    <string name="are_you_sure_you_want_to_logout">Are you sure you want to\n logout?</string>
    <string name="edit"><u>Edit</u></string>

    <string name="no_internet_dialog_msg">Check your internet connection and try again.</string>
    <string name="enter_your_email_here">Enter your email here</string>
    <string name="api_key_location">AIzaSyAI8v81ijt2sXkMwcPWeVSEGqB2rxXFHiA</string>
    <string name="see_more">See More</string>
    <string name="cleaning_fee">Cleaning Fee</string>
    <string name="zyvoo_service_fee">Zyvo Service Fee</string>
    <string name="taxes">Taxes</string>
    <string name="add_on">Add-on</string>
    <string name="discount">Discount</string>
    <string name="all_bookings">All Bookings</string>
    <string name="confirmed">Confirmed</string>
    <string name="pending">Pending</string>
    <string name="finished">Finished</string>
    <string name="cancelled">Cancelled</string>
    <string name="sorry_we">Sorry, we couldn’t find \n any results.</string>
    <string name="turn_on_notifications">Turn on Notifications</string>
    <string name="show_more"><u>Show More</u></string>
    <string name="booking_time_extension_bte">Booking time extension (BTE)</string>
    <string name="review_guest">Review Guest    </string>
    <string name="sort_by_highest_review">Sort by: Highest Review</string>
    <string name="sort_by_lowest_review">Sort by: Lowest Review</string>
    <string name="sort_by_recent_review">Sort by: Recent Review</string>
    <string name="enter_confirm_password">Enter confirm password</string>
    <string name="register_now">Register Now</string>
    <string name="login_here">Login Here</string>
    <string name="enter_your_phone_to_register_your_naccount">Enter your phone number to register your\naccount</string>
    <string name="enter_your_phone_to_login_your_naccount">Enter your phone number to login your\naccount</string>
    <string name="already_have_an_account">Already have an account?</string>
    <string name="don_t_have_an_account">Don\'t have an account?</string>
    <string name="enter_your_email_to_register_your_n_account">Enter your email to register your\n account.</string>
    <string name="enter_your_email_and_password_to_n_login_your_account">Enter your email and password to\n login your account.</string>
    <string name="create_account">Create Account</string>
    <string name="contact_us">Contact us</string>
    <string name="we_ll_start_with_some_questions_and_get_nyou_to_the_right_place">We\'ll start with some questions and get \nyou to the right place.</string>
    <string name="need_to_get_in_touch">Need to get in touch?</string>
    <string name="message_the_host">Message the host</string>
    <string name="host_provided_services_items_or_options_navailable_at_checkout">Host provided services, items or options. \nAvailable at checkout.</string>

    <string-array name="hourly_rates">
        <item>$10 per hour</item>
        <item>$20 per hour</item>
        <item>$30 per hour</item>
        <item>$40 per hour</item>
        <item>$50 per hour</item>
        <item>$60 per hour</item>
        <item>$70 per hour</item>
        <item>$80 per hour</item>
    </string-array>
    <string name="facebook_app_id">1496652041603070</string>
    <string name="fb_login_protocol_scheme">fb1496652041603070</string>
    <string name="facebook_client_token">4c4b7980b87baf696da16619cb364744</string>
    <string name="www_zyvo_com_is_requesting_access_to_your_device_s_location_please_enable_location_services_to_proceed">www.zyvo.com is requesting access to your device’s location. Please enable location services to proceed.</string>
    <string name="lorem_ipsum_is_simply_dummy_text_of_the_printing_and_typesetting_industry_lorem_ipsum_has_been_the_industry_s_standard_dummy_text_ever_since_the_1500s_when_an_unknown_printer_took_a_galley_of_type_and_scrambled_it_to_make_a_type_specimen_book_it_has_survived_not_only_five_centuries_but_also_the_leap_into_electronic_typesetting_remaining_essentially_unchanged">Lorem Ipsum is simply dummy text of the printing and typesetting industry. Lorem Ipsum has been the industry\'s standard dummy text ever since the 1500s, when an unknown printer took a galley of type and scrambled it to make a type specimen book.\n\nIt has survived not only five centuries, but also the leap into electronic typesetting, remaining essentially unchanged.</string>


</resources>