<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:background="@color/white"

    tools:context=".fragment.guest.GuestDiscoverFragment">

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:id="@+id/clSearch"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:layout_constraintTop_toTopOf="parent"
        android:background="@drawable/stroke1"
        >
        <RelativeLayout
            android:id="@+id/rlFind"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginVertical="@dimen/_13sdp"
            android:layout_marginHorizontal="@dimen/_20sdp"
            android:background="@drawable/search_bar_bg"
            android:paddingVertical="@dimen/_3sdp"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintBottom_toBottomOf="parent">

            <TextView
                android:id="@+id/textWhere"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_centerVertical="true"
                android:layout_marginHorizontal="@dimen/_15sdp"
                android:fontFamily="@font/poppins"
                android:text="@string/where"
                android:textColor="@color/black"
                android:textSize="@dimen/_12ssp" />

            <View
                android:id="@+id/viewTextWhere"
                android:layout_width="@dimen/_1sdp"
                android:layout_height="@dimen/_15sdp"
                android:layout_alignParentTop="true"
                android:layout_centerVertical="true"
                android:layout_toEndOf="@id/textWhere"
                android:background="#E5E5E5" />

            <TextView
                android:id="@+id/textTime"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_centerVertical="true"
                android:layout_marginHorizontal="@dimen/_15sdp"
                android:layout_toEndOf="@id/viewTextWhere"
                android:fontFamily="@font/poppins"
                android:text="@string/time"
                android:textColor="@color/black"
                android:textSize="@dimen/_12ssp" />

            <View
                android:id="@+id/viewTextTime"
                android:layout_width="@dimen/_1sdp"
                android:layout_height="@dimen/_15sdp"
                android:layout_centerVertical="true"
                android:layout_toEndOf="@id/textTime"
                android:background="#E5E5E5" />

            <TextView
                android:id="@+id/textActivity"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_centerVertical="true"
                android:layout_marginStart="@dimen/_15sdp"
                android:layout_marginEnd="@dimen/_10sdp"
                android:layout_toEndOf="@id/viewTextTime"
                android:fontFamily="@font/poppins"
                android:text="@string/activity"
                android:textColor="@color/black"
                android:textSize="@dimen/_12ssp" />

            <ImageView
                android:id="@+id/imageSearchBar"
                android:layout_width="@dimen/_30sdp"
                android:layout_height="@dimen/_30sdp"
                android:layout_centerVertical="true"
                android:layout_marginEnd="@dimen/_5sdp"
                android:layout_toEndOf="@id/textActivity"
                android:src="@drawable/ic_search_bar_icon" />


        </RelativeLayout>


        <ImageView
            android:id="@+id/filter_icon"
            android:layout_width="@dimen/_30sdp"
            android:layout_height="@dimen/_30sdp"
            android:layout_marginHorizontal="@dimen/_10sdp"
            android:src="@drawable/ic_filter"
            app:layout_constraintBottom_toBottomOf="@id/rlFind"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toEndOf="@+id/rlFind"
            app:layout_constraintTop_toTopOf="@+id/rlFind" />

    </androidx.constraintlayout.widget.ConstraintLayout>

    <androidx.recyclerview.widget.RecyclerView
        android:id="@+id/recyclerViewBooking"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        app:layoutManager="androidx.recyclerview.widget.GridLayoutManager"
        app:spanCount="2"
        android:layout_below="@+id/clSearch"
        tools:itemCount="20"
        tools:listitem="@layout/layout_logged_recyclerview"
        app:layout_constraintTop_toBottomOf="@+id/clSearch"
        android:layout_marginBottom="@dimen/_60sdp"
        android:orientation="vertical"/>

    </RelativeLayout>


    <RelativeLayout
        android:layout_width="wrap_content"
        android:layout_height="@dimen/_30sdp"
        android:background="@drawable/bg_two_side_circular_black"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        android:layout_marginBottom="@dimen/_85sdp"
        >

        <ImageView
            android:id="@+id/img_map"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:src="@drawable/ic_location_map_home"
            android:layout_centerVertical="true"
            android:layout_marginStart="@dimen/_10sdp"
            android:layout_marginEnd="@dimen/_5sdp"
            />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="Show Map"
            android:textColor="@color/white"
            android:layout_marginStart="@dimen/_2sdp"
            android:layout_toRightOf="@id/img_map"
            android:layout_centerVertical="true"
            android:layout_marginEnd="@dimen/_12sdp"
            />

    </RelativeLayout>

</androidx.constraintlayout.widget.ConstraintLayout>
